--- a/sass/components/_features-card.scss
+++ b/sass/components/_features-card.scss
@@ -1,4 +1,5 @@
 .features-card {
+  min-height: 95vh;
   padding: 4rem 2rem;
   width: 70%;
   margin: auto;
